# Geoguessr-Bullseye-Game-Tracker

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  content.js  history.css  history.html  history.js  manifest.json  package.json  popup.html  popup.js  stats.css  stats.html  stats.js  test
.github/workflows/: backend-publish.yml  ci.yaml  docker-publish.yml  extension-build.yml  frontend-publish.yml  helm-publish.yml
backend/: .env.example  Cargo.toml  Dockerfile  bullseye.db  bullseye.db-shm  bullseye.db-wal  payload.json
backend/migrations/: 20231124000000_create_games_table.sql  20251204000000_create_players_table.sql  20251210000000_create_player_aliases.sql
backend/src/: main.rs
charts/bullseye/: Chart.yaml  values.yaml
charts/bullseye/templates/: pvc.yaml  (+11 more)
extension/: README.md  eslint.config.js  package.json
extension/data_debug/: get_game_api.json  get_game_api_ended_party.json.json  get_game_durring_a_game.json  get_lobby.json  ws_data_guess.json  ws_data_round_abborted.json  ws_data_round_ended.json  ws_data_round_ended_last.json  ws_data_round_started.json
extension/src/: manifest.json
frontend/: Dockerfile  eslint.config.js  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
k8s/: README.md  argocd-app.yaml  argocd-image-updater.yaml
src/: manifest.json
src/pages/: history.css  history.html  history.js  leaderboard.css  leaderboard.html  leaderboard.js  package.json  popup.css  popup.html  popup.js  stats.css  stats.html  stats.js
src/scripts/: content.js  inject.js  storage.js
(+28 files in other folders)
